# clogger

./: .gitignore  Cargo.toml  README.md  logger-tui.example.toml  logger-tui.toml  plan.md
logger-cli/: Cargo.toml
logger-cli/src/: main.rs  runner.rs  script.rs
logger-core/: Cargo.toml
logger-core/src/: effects.rs  events.rs  lib.rs  macro_expand.rs  reducer.rs  state.rs
logger-runtime/: Cargo.toml
logger-runtime/src/: call_history.rs  config.rs  dxfeed_adapter.rs  lib.rs  log_adapter.rs  rig_adapter.rs  scp.rs
logger-runtime/src/scoring/: cqww.rs  mod.rs  spec_scorer.rs  sweeps.rs  unique_call.rs
logger-tui/: Cargo.toml
logger-tui/src/: config.rs  event_loop.rs  main.rs
logger-tui/src/adapters/: dxfeed.rs  keyer.rs  log.rs  mod.rs  rig.rs  terminal.rs
logger-tui/src/ui/: avail_box.rs  bandmap.rs  cw_buffer.rs  entry_line.rs  log_tail.rs  mod.rs  rate_box.rs  score_box.rs  status_bar.rs
scripts/: cqww_call_history_operator_override.json  cqww_dupe_indicator.json  cqww_new_mult_indicator.json  cqww_run_exch_sent_edit_resets.json  cqww_run_invalid.json  cqww_run_two_step.json  cqww_sp_one_step.json  cqww_sp_send_tu.json  cwt_call_history_prepopulate.json  so2r_focus_dupe_band_separation.json  so2r_focus_mult_per_band.json  sweeps_dupe_indicator.json  sweeps_invalid_focus.json  sweeps_run_exch_sent_edit_resets.json  sweeps_run_two_step.json
scripts/snapshots/: cqww_dupe_indicator.trace.json  cqww_new_mult_indicator.trace.json  cqww_run_exch_sent_edit_resets.trace.json  cqww_run_two_step.trace.json  so2r_focus_dupe_band_separation.trace.json
(+15 files in other folders)
